# hardqoi

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs
.cargo/: config.toml
explanations/: Hashing RGBA8 with SSSE3.drawio  SIMDQOIHASH.drawio
legacy_reference/rust/: decoding.rs  encoding.rs  mod.rs  wrap_math_pixel.rs
src/: arch_switch.rs  lib.rs  main.rs  qoi.rs
src/hashes/: slow.rs  ssse3.rs
src/impl/anything/: encoding.rs  hashing.rs
src/impl/x86-ssse3/: encoding.rs  lib.rs
src/impls/: mod.rs
src/impls/anything/: decoding.rs  encoding.rs  hashing.rs  wrap_math_pixel.rs  wrapping_rgba.rs
src/impls/x86-ssse3/: contexts.rs  decode_context.rs  decoding.rs  encode_context.rs  encoding.rs  hashing.rs  lib.rs
src/impls/x86_64/avx-512/: mod.rs
src/impls/x86_64/ssse3/: hashing.rs
src/x86_64/: decode.rs  encode.rs  hashing.rs  mod.rs
src/x86_64/avx512encode/: Cargo.toml
src/x86_64/avx512encode/src/: common.rs  lib.rs  mk1.rs
src/x86_64/avx512encode/test/: main.rs
src/x86_64/special/: mod.rs  v2.rs  v3.rs  v3n.rs  v4.rs  v4n.rs
test/: get_jw_big.ps1  get_jw_big.sh  main.rs
