[package]
name = "hardqoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "^1.10.0"
image = {version = "^0.24.2", optional = true }

[features]
default = ["image_compat"]
image_compat = ["dep:image"]
shut-up = []
force-compile = []
simd-x4 = []
simd-m4 = ["simd-x4"]
simd-x8 = ["simd-x4"]
simd-m8 = ["simd-x8", "simd-m4"]
simd-x16 = ["simd-x8"]
simd-m16 = ["simd-x16"]
simd-max = []

[[bin]]
name = "hardqoi"
path = "src/main.rs"
test = true
bench = false
doc = false

[lib]
name = "libhardqoi"
path = "src/lib.rs"
test = false
bench = false
doc = false
crate-type = ["lib"]

[build-dependencies]
lazy_static = "1.4.0"

