[package]
name = "hardqoi"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["src/x86_64/avx512encode"]


[dependencies]
bytemuck = "^1.10.0"
image = {version = "^0.24.2", optional = true }
raw-cpuid = "11.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# avx512encode = {package = "hardqoi-avx512encode", path = "src/x86_64/avx512encode", optional = true}

[features]
default = ["image_compat"]
image_compat = ["dep:image"]

[[bin]]
name = "hardqoi"
path = "src/main.rs"
test = true
bench = false
doc = false

[lib]
name = "libhardqoi"
path = "src/lib.rs"
test = false
bench = false
doc = false
crate-type = ["lib"]

[build-dependencies]
lazy_static = "1.4.0"

[profile.release]
debug = true