[package]
name = "hardqoi"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["src/x86_64/avx512encode"]


[dependencies]
bytemuck = "^1.10.0"
image = {version = "^0.24.2", optional = true }
raw-cpuid = "11.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# avx512encode = {package = "hardqoi-avx512encode", path = "src/x86_64/avx512encode", optional = true}

[dev-dependencies]
bytemuck = "^1.10.0"
image = "^0.24.2"
qoi_rs = "0.1.1"
rapid-qoi = "0.6.1"

[features]
default = ["image_compat"]
image_compat = ["dep:image"]

[[test]]
name = "hardqoi-tester"
path = "test/main.rs"
test = true
bench = false
doc = false

[lib]
name = "hardqoi"
path = "src/lib.rs"
test = false
bench = false
doc = false
crate-type = ["lib"]

[build-dependencies]
lazy_static = "1.4.0"

[profile.release]
debug = true

[profile.dev]
opt-level = 3
overflow-checks = false